# wb_parser

./: wb_parser_potoki.py
vseros-toolkit-main/: LICENSE  README.md  pyproject.toml
vseros-toolkit-main/common/: __init__.py  cache.py  seed.py  timer.py  validators.py
vseros-toolkit-main/common/configs/: __init__.py  fingerprint.py  loader.py
vseros-toolkit-main/common/cv/: __init__.py  folds.py
vseros-toolkit-main/common/features/: __init__.py  assemble.py  cat_freq.py  cat_te_oof.py  crosses.py  geo_grid.py  geo_neighbors.py  img_embed.py  img_index.py  img_stats.py  num_basic.py  store.py  text_tfidf.py  time_agg.py  types.py
vseros-toolkit-main/common/io/: __init__.py  sets.py
vseros-toolkit-main/common/models/: __init__.py  artifacts.py  blend.py  calibration.py  eval.py  gbdt.py  linear.py  thresholds.py  types.py
vseros-toolkit-main/common/tools/: adversarial.py  gc_artifacts.py  panic.py  run_blend.py  run_features.py  run_model.py  stability.py  submit.py  validate_set.py
vseros-toolkit-main/configs/core/: defaults.yaml  logging.yaml  paths.yaml  resources.yaml  version.yaml
vseros-toolkit-main/docs/: chunkers.md  features.md  models.md
vseros-toolkit-main/rag/: __init__.py  candidates.py  chunkers.py  context.py  corpus.py  debug.py  embeddings.py  indices.py  rerank.py  retrieval.py  tokens.py  utils.py
vseros-toolkit-main/recsys/: README.md
vseros-toolkit-main/tests/: images_smoke.py  model_smoke.py  time_crosses_smoke.py
vseros-toolkit-main/tools/: config_fingerprint.py  config_lint.py  config_show.py
(+199 files in other folders)
